--- a/index.ipynb
+++ b/index.ipynb
@@ -234,13 +234,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Italy'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "italy = 'Italy'# 'Italy'"
+    "italy = 'Italy'# 'Italy'\n",
+    "italy"
    ]
   },
   {
