--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
    ],
    "source": [
     "countries[2:5] = 'kindof_neighbors' \n",
-    "kindof_neighbors"
+    "kindof_neighbors = "
    ]
   },
   {
