--- a/index.ipynb
+++ b/index.ipynb
@@ -332,11 +332,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries[0]= Thailand"
+    "countries[0] = 'Thailand'"
    ]
   },
   {
