Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -348,9 +348,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Thailand',\n",
+       " 'USA',\n",
+       " 'k',\n",
+       " 'i',\n",
+       " 'n',\n",
+       " 'd',\n",
+       " 'o',\n",
+       " 'f',\n",
+       " '_',\n",
+       " 'n',\n",
+       " 'e',\n",
+       " 'i',\n",
+       " 'g',\n",
+       " 'h',\n",
+       " 'b',\n",
+       " 'o',\n",
+       " 'r',\n",
+       " 's',\n",
+       " 'd',\n",
+       " 'o',\n",
+       " 'f',\n",
+       " '_',\n",
+       " 'n',\n",
+       " 'e',\n",
+       " 'i',\n",
+       " 'g',\n",
+       " 'h',\n",
+       " 'b',\n",
+       " 'o',\n",
+       " 'r',\n",
+       " 's',\n",
+       " 'Morocco',\n",
+       " 'New Mexico',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'malta']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "countries \n",
     "# ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'New Mexico', 'Finland', \n",
