Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -336,7 +336,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries[0] = 'Thailand'"
+    "countries[0] = ''"
    ]
   },
   {
