--- a/index.ipynb
+++ b/index.ipynb
@@ -336,7 +336,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries[-2] = 'Th'"
+    "countries[-2] = 'Thailand'"
    ]
   },
   {
