--- a/index.ipynb
+++ b/index.ipynb
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -390,11 +390,11 @@
        " 'Finland',\n",
        " 'Argentina',\n",
        " 'Italy',\n",
-       " 'Canada',\n",
+       " 'Thailand',\n",
        " 'malta']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
