Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries[-1] = 'malta'"
+    "countries.append = 'malta'"
    ]
   },
   {
