Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -184,6 +184,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mexico = countries[3]\n",
+    "mexico"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
