Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -181,16 +181,16 @@
     {
      "data": {
       "text/plain": [
-       "'Malta'"
+       "'Thailand'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "italy = countries [-1]\n",
+    "italy = countries [-3]\n",
     "italy"
    ]
   },
