Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -181,17 +181,18 @@
     {
      "data": {
       "text/plain": [
-       "'Thailand'"
+       "'Italy'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "italy = countries [-3]\n",
-    "italy = 'Italy'"
+    "italy = 'Italy'\n",
+    "italy"
    ]
   },
   {
