Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -349,14 +349,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Thailand',\n",
-       " 'USA',\n",
+       "['Croatia',\n",
        " 'k',\n",
        " 'i',\n",
        " 'n',\n",
@@ -373,30 +372,17 @@
        " 'o',\n",
        " 'r',\n",
        " 's',\n",
-       " 'd',\n",
-       " 'o',\n",
-       " 'f',\n",
-       " '_',\n",
-       " 'n',\n",
-       " 'e',\n",
-       " 'i',\n",
-       " 'g',\n",
-       " 'h',\n",
-       " 'b',\n",
-       " 'o',\n",
-       " 'r',\n",
-       " 's',\n",
        " 'Morocco',\n",
-       " 'USA',\n",
+       " 'New Mexico',\n",
        " 'Finland',\n",
        " 'Argentina',\n",
        " 'Italy',\n",
-       " 'Thailand',\n",
-       " 'malta',\n",
+       " 'Canada',\n",
+       " 'South Korea',\n",
        " 'Malta']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
