Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries[-2] = 'Thailand'"
+    "countries.append()"
    ]
   },
   {
