--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append()"
+    "countries.append('Thailand)')"
    ]
   },
   {
