Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -401,11 +401,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Croatia',\n",
+       " 'k',\n",
+       " 'i',\n",
+       " 'n',\n",
+       " 'd',\n",
+       " 'o',\n",
+       " 'f',\n",
+       " '_',\n",
+       " 'n',\n",
+       " 'e',\n",
+       " 'i',\n",
+       " 'g',\n",
+       " 'h',\n",
+       " 'b',\n",
+       " 'o',\n",
+       " 'r',\n",
+       " 's',\n",
+       " 'Morocco',\n",
+       " 'New Mexico',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'South Korea',\n",
+       " 'Malta',\n",
+       " 'Thailand']"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "countries.append('Thailand')\n"
+    "countries.append('Thailand')\n",
+    "countries"
    ]
   },
   {
